fix: 修复了解封功能和Traceroute，向下兼容了版本